Change the way of generating the age of the user
Drop the rows with the product name missing
Change the way of generating the age of users, preventing one user with different age

--- a/DS4300 Final Project Data Cleaning.ipynb
+++ b/DS4300 Final Project Data Cleaning.ipynb
@@ -630,6 +630,16 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop the row with no product name\n",
+    "result = result.dropna(subset = [\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -656,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -709,7 +719,7 @@
        "      <td>5.0</td>\n",
        "      <td>This product so far has not disappointed. My c...</td>\n",
        "      <td>Adapter</td>\n",
-       "      <td>45</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -722,7 +732,7 @@
        "      <td>5.0</td>\n",
        "      <td>great for beginner or experienced person. Boug...</td>\n",
        "      <td>truman</td>\n",
-       "      <td>44</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -735,7 +745,7 @@
        "      <td>5.0</td>\n",
        "      <td>Inexpensive tablet for him to use and learn on...</td>\n",
        "      <td>DaveZ</td>\n",
-       "      <td>50</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -748,7 +758,7 @@
        "      <td>4.0</td>\n",
        "      <td>I've had my Fire HD 8 two weeks now and I love...</td>\n",
        "      <td>Shacks</td>\n",
-       "      <td>47</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -761,7 +771,7 @@
        "      <td>5.0</td>\n",
        "      <td>I bought this for my grand daughter when she c...</td>\n",
        "      <td>explore42</td>\n",
-       "      <td>44</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -783,26 +793,32 @@
        "4  Electronics,iPad & Tablets,All Tablets,Fire Ta...       Amazon     5.0   \n",
        "\n",
        "                                                text   username  age  \n",
-       "0  This product so far has not disappointed. My c...    Adapter   45  \n",
-       "1  great for beginner or experienced person. Boug...     truman   44  \n",
-       "2  Inexpensive tablet for him to use and learn on...      DaveZ   50  \n",
-       "3  I've had my Fire HD 8 two weeks now and I love...     Shacks   47  \n",
-       "4  I bought this for my grand daughter when she c...  explore42   44  "
+       "0  This product so far has not disappointed. My c...    Adapter   52  \n",
+       "1  great for beginner or experienced person. Boug...     truman   51  \n",
+       "2  Inexpensive tablet for him to use and learn on...      DaveZ   23  \n",
+       "3  I've had my Fire HD 8 two weeks now and I love...     Shacks   25  \n",
+       "4  I bought this for my grand daughter when she c...  explore42   34  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result['age']= result['id'].apply(generateAge)\n",
+    "# get unique username list\n",
+    "user_list = list(result[\"username\"].unique())\n",
+    "# randomly generate age for corresponding user\n",
+    "random_age_list = [generateAge(i) for i in user_list]\n",
+    "\n",
+    "# update the dataframe\n",
+    "result['age']= result['username'].apply(lambda x: random_age_list[user_list.index(x)])\n",
     "result.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +921,7 @@
        "2905       Amazon  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -966,27 +982,27 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>Adapter</td>\n",
-       "      <td>45</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>truman</td>\n",
-       "      <td>44</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>DaveZ</td>\n",
-       "      <td>50</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Shacks</td>\n",
-       "      <td>47</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>explore42</td>\n",
-       "      <td>44</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -994,14 +1010,14 @@
       ],
       "text/plain": [
        "    username  age\n",
-       "0    Adapter   45\n",
-       "1     truman   44\n",
-       "2      DaveZ   50\n",
-       "3     Shacks   47\n",
-       "4  explore42   44"
+       "0    Adapter   52\n",
+       "1     truman   51\n",
+       "2      DaveZ   23\n",
+       "3     Shacks   25\n",
+       "4  explore42   34"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
