--- a/Query for inserting nodes and relation.ipynb
+++ b/Query for inserting nodes and relation.ipynb
@@ -492,10 +492,10 @@
     "WITH p, p2, intersection, COLLECT(pc.category) AS s1\n",
     "MATCH (p2)-[:IN]->(p2c:Category)\n",
     "WITH p, p2, s1, intersection, COLLECT(p2c.category) AS s2\n",
-    "WITH p, p2, intersection, [x IN s2 WHERE NOT x IN s1] AS difference, s1, s2\n",
+    "WITH p, p2, intersection, s1+[x IN s2 WHERE NOT x IN s1] AS unionSet, s1, s2\n",
     "RETURN p.id as Userproduct, p2.id as Recommendate, \n",
     "s1 as UserProductCategory, s2 as RecommendateProductCategory,\n",
-    "((1.0*intersection)/(intersection + SIZE(difference))) AS jaccard ORDER BY jaccard DESC\n",
+    "((1.0*intersection)/SIZE(unionSet)) AS jaccard ORDER BY jaccard DESC\n",
     "limit 10'''\n",
     "    return query"
    ]
