collective finish kw

--- a/Query for inserting nodes and relation.ipynb
+++ b/Query for inserting nodes and relation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -58,7 +58,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi,...</td>\n",
@@ -68,10 +68,10 @@
        "      <td>5.0</td>\n",
        "      <td>This product so far has not disappointed. My c...</td>\n",
        "      <td>Adapter</td>\n",
-       "      <td>46</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi,...</td>\n",
@@ -81,10 +81,10 @@
        "      <td>5.0</td>\n",
        "      <td>great for beginner or experienced person. Boug...</td>\n",
        "      <td>truman</td>\n",
-       "      <td>40</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi,...</td>\n",
@@ -94,10 +94,10 @@
        "      <td>5.0</td>\n",
        "      <td>Inexpensive tablet for him to use and learn on...</td>\n",
        "      <td>DaveZ</td>\n",
-       "      <td>26</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi,...</td>\n",
@@ -107,10 +107,10 @@
        "      <td>4.0</td>\n",
        "      <td>I've had my Fire HD 8 two weeks now and I love...</td>\n",
        "      <td>Shacks</td>\n",
-       "      <td>29</td>\n",
+       "      <td>25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi,...</td>\n",
@@ -120,7 +120,7 @@
        "      <td>5.0</td>\n",
        "      <td>I bought this for my grand daughter when she c...</td>\n",
        "      <td>explore42</td>\n",
-       "      <td>59</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,14 +142,14 @@
        "4  Electronics,iPad & Tablets,All Tablets,Fire Ta...       Amazon     5.0   \n",
        "\n",
        "                                                text   username  age  \n",
-       "0  This product so far has not disappointed. My c...    Adapter   46  \n",
-       "1  great for beginner or experienced person. Boug...     truman   40  \n",
-       "2  Inexpensive tablet for him to use and learn on...      DaveZ   26  \n",
-       "3  I've had my Fire HD 8 two weeks now and I love...     Shacks   29  \n",
-       "4  I bought this for my grand daughter when she c...  explore42   59  "
+       "0  This product so far has not disappointed. My c...    Adapter   52  \n",
+       "1  great for beginner or experienced person. Boug...     truman   51  \n",
+       "2  Inexpensive tablet for him to use and learn on...      DaveZ   23  \n",
+       "3  I've had my Fire HD 8 two weeks now and I love...     Shacks   25  \n",
+       "4  I bought this for my grand daughter when she c...  explore42   34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -213,12 +213,12 @@
     "# make connection to the database\n",
     "conn = Neo4jConnection(uri = \"neo4j://localhost:7687\",\n",
     "                       user = \"neo4j\",              \n",
-    "                       pwd = \"Anni,0710\")"
+    "                       pwd = \"123321\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -404,14 +404,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "33237"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'conn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c7bcf68d95d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m len(conn.query('''MATCH(u:User)\n\u001b[0m\u001b[1;32m      2\u001b[0m return u.username'''))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'conn' is not defined"
+     ]
     }
    ],
    "source": [
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -527,6 +528,62 @@
    ],
    "source": [
     "conn.query(cbf_query('John'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input a user name and return at most 25 products that score the highest based on the products the input user buy.\n",
+    "def getRecommandProductsForUser(user_name):\n",
+    "    recommand_list = conn.query('''match (u1:User{username:\\\"'''+ user_name +'''\\\"})-[r1:Reviews]->(p1:Product)<-[r2:Reviews]-(u2:User)-[r3:Reviews]->(p2:Product) return p2.name, collect(distinct p1.id) as product_id, id(u2) as partner_id, (count(r1) + count(r2) + count(r3)) / 3  as score order by score desc limit 25''')\n",
+    "    return [x[0] for x in recommand_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Magenta',\n",
+       " 'Echo (White),,,\\r\\nEcho (White),,,',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Black',\n",
+       " 'Brand New Amazon Kindle Fire 16gb 7 Ips Display Tablet Wifi 16 Gb Blue,,,',\n",
+       " 'All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi, 16 GB - Includes Special Offers, Magenta',\n",
+       " 'Echo (White),,,\\r\\nEcho (White),,,',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Magenta',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Magenta',\n",
+       " 'Kindle Voyage E-reader, 6 High-Resolution Display (300 ppi) with Adaptive Built-in Light, PagePress Sensors, Wi-Fi - Includes Special Offers,',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Magenta',\n",
+       " 'Echo (White),,,\\r\\nEcho (White),,,',\n",
+       " 'Echo (White),,,\\r\\nEcho (White),,,',\n",
+       " 'Amazon Kindle Paperwhite - eBook reader - 4 GB - 6 monochrome Paperwhite - touchscreen - Wi-Fi - black,,,',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Black',\n",
+       " 'Brand New Amazon Kindle Fire 16gb 7 Ips Display Tablet Wifi 16 Gb Blue,,,',\n",
+       " 'Fire Kids Edition Tablet, 7 Display, Wi-Fi, 16 GB, Green Kid-Proof Case',\n",
+       " 'Amazon Tap Smart Assistant Alexaenabled (black) Brand New',\n",
+       " 'All-New Fire HD 8 Tablet, 8 HD Display, Wi-Fi, 16 GB - Includes Special Offers, Magenta',\n",
+       " 'Amazon Kindle Paperwhite - eBook reader - 4 GB - 6 monochrome Paperwhite - touchscreen - Wi-Fi - black,,,',\n",
+       " 'Brand New Amazon Kindle Fire 16gb 7 Ips Display Tablet Wifi 16 Gb Blue,,,',\n",
+       " 'Fire Kids Edition Tablet, 7 Display, Wi-Fi, 16 GB, Pink Kid-Proof Case',\n",
+       " 'Brand New Amazon Kindle Fire 16gb 7 Ips Display Tablet Wifi 16 Gb Blue,,,',\n",
+       " 'Fire Tablet, 7 Display, Wi-Fi, 8 GB - Includes Special Offers, Magenta',\n",
+       " 'Echo (White),,,\\r\\nEcho (White),,,',\n",
+       " 'Amazon - Echo Plus w/ Built-In Hub - Silver']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getRecommandProductsForUser(\"Kacy\")"
    ]
   },
   {
@@ -1580,9 +1637,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PyCharm (DS4300-Final-Project-main)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pycharm-381a9001"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1594,7 +1651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
